--- a/Harden System Security/Pages/GroupPolicyEditor.xaml
+++ b/Harden System Security/Pages/GroupPolicyEditor.xaml
@@ -100,6 +100,14 @@
                                    x:Uid="GenericBrowseButton"
                                    VerticalAlignment="Center"
                                    Click="{x:Bind ViewModel.BrowseForPolicy_Click}">
+                    <Button.ContentTemplate>
+                        <DataTemplate x:DataType="x:String">
+                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                <FontIcon Glyph="&#xEC50;" FontSize="16"/>
+                                <TextBlock Text="{x:Bind}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </Button.ContentTemplate>
 
                     <customUI:ButtonV2.Flyout>
                         <Flyout>
@@ -124,12 +132,30 @@
                 <Button x:Uid="LoadButton"
                         VerticalAlignment="Center"
                         IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}"
-                        Click="{x:Bind ViewModel.ProcessSelectedFile}" />
+                        Click="{x:Bind ViewModel.ProcessSelectedFile}">
+                    <Button.ContentTemplate>
+                        <DataTemplate x:DataType="x:String">
+                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                <FontIcon Glyph="&#xE9F5;" FontSize="16"/>
+                                <TextBlock Text="{x:Bind}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </Button.ContentTemplate>
+                </Button>
 
                 <Button x:Uid="ClearDataButton"
                         VerticalAlignment="Center"
                         IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}"
-                        Click="{x:Bind ViewModel.ClearData}" />
+                        Click="{x:Bind ViewModel.ClearData}">
+                    <Button.ContentTemplate>
+                        <DataTemplate x:DataType="x:String">
+                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                <FontIcon Glyph="&#xED62;" FontSize="16"/>
+                                <TextBlock Text="{x:Bind}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </Button.ContentTemplate>
+                </Button>
 
                 <TextBox x:Uid="TotalPoliciesTextBlock"
                          Text="{x:Bind ViewModel.TotalPolicies, Mode=OneWay}"
