--- a/Harden System Security/Pages/Logs.xaml
+++ b/Harden System Security/Pages/Logs.xaml
@@ -4,6 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:HardenSystemSecurity.Pages"
+    xmlns:systemIO="using:System.IO"
     xmlns:others="using:AppControlManager.Others"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -26,8 +27,14 @@
 
         <controls:WrapPanel Orientation="Horizontal" Grid.Row="1" Margin="10" HorizontalSpacing="10" VerticalSpacing="10">
             <!-- ComboBox for selecting log files -->
-            <ComboBox ItemsSource="{x:Bind ViewModel.LogFiles}"
-                      SelectedItem="{x:Bind ViewModel.SelectedLogFile, Mode=TwoWay}" />
+            <ComboBox ItemsSource="{x:Bind ViewModel.LogFiles}"                     
+                      SelectedItem="{x:Bind ViewModel.SelectedLogFile, Mode=TwoWay}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate x:DataType="systemIO:FileInfo">
+                        <TextBlock Text="{x:Bind Name}" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
 
             <!-- Button to refresh the logs -->
             <Button x:Uid="RefreshLogFilesButton"
@@ -47,6 +54,17 @@
                 </StackPanel>
             </Button>
 
+            <Button x:Uid="CopySelectedButton" Click="{x:Bind ViewModel.CopySelectedLogLines}" >
+                <Button.ContentTemplate>
+                    <DataTemplate x:DataType="x:String">
+                        <StackPanel Orientation="Horizontal" Spacing="8">
+                            <FontIcon Glyph="&#xE8C8;" FontSize="16"/>
+                            <TextBlock Text="{x:Bind}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+
             <!-- Search TextBox -->
             <TextBox x:Uid="SearchBoxTextBox"
                      MinWidth="300"
@@ -63,8 +81,9 @@
 
         <ListView Grid.Row="2"
                   ItemsSource="{x:Bind ViewModel.LogCollection, Mode=OneWay}"
-                  SelectionMode="None"
+                  SelectionMode="Multiple"
                   IsItemClickEnabled="False"
+                  Loaded="{x:Bind ViewModel.ListView_Loaded}"
                   ScrollViewer.HorizontalScrollMode="Disabled"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                   ScrollViewer.VerticalScrollMode="Auto"
@@ -79,13 +98,6 @@
                               Margin="5"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                    <Setter Property="Padding" Value="0"/>
-                    <Setter Property="Margin" Value="0"/>
-                </Style>
-            </ListView.ItemContainerStyle>
         </ListView>
     </Grid>
 </Page>
