--- a/Harden System Security/Pages/AuditPolicies.xaml
+++ b/Harden System Security/Pages/AuditPolicies.xaml
@@ -143,7 +143,7 @@
                             <ColumnDefinition Width="{x:Bind ViewModel.ColumnWidth5, Mode=TwoWay}" MinWidth="50" />
                         </Grid.ColumnDefinitions>
                         <Button x:Uid="CategoryColumnHeaderBtn" Tag="CategoryName" Grid.Column="0" Margin="10,0,0,0" Style="{StaticResource ListViewHeaderButton}" Click="{x:Bind ViewModel.HeaderColumnSortingButton_Click}" />
-                        <Button x:Uid="SubcategoryColumnHeaderBtn" Tag="SubcategoryName" Grid.Column="1" Margin="0" Style="{StaticResource ListViewHeaderButton}" Click="{x:Bind ViewModel.HeaderColumnSortingButton_Click}" />
+                        <Button x:Uid="SubCategoryColumnHeaderBtn" Tag="SubcategoryName" Grid.Column="1" Margin="0" Style="{StaticResource ListViewHeaderButton}" Click="{x:Bind ViewModel.HeaderColumnSortingButton_Click}" />
                         <Button x:Uid="AuditSettingColumnHeaderBtn" Tag="AuditSettingDescription" Grid.Column="2" Margin="0" Style="{StaticResource ListViewHeaderButton}" Click="{x:Bind ViewModel.HeaderColumnSortingButton_Click}" />
                         <Button x:Uid="CategoryGUIDColumnHeaderBtn" Tag="CategoryGuid" Grid.Column="3" Margin="0" Style="{StaticResource ListViewHeaderButton}" Click="{x:Bind ViewModel.HeaderColumnSortingButton_Click}" />
                         <Button x:Uid="SubcategoryGUIDColumnHeaderBtn" Tag="SubcategoryGuid" Grid.Column="4" Margin="0" Style="{StaticResource ListViewHeaderButton}" Click="{x:Bind ViewModel.HeaderColumnSortingButton_Click}" />
@@ -188,7 +188,7 @@
                                             </MenuFlyoutItem.Icon>
                                         </MenuFlyoutItem>
 
-                                        <MenuFlyoutItem x:Uid="SubcategoryHeader" Tag="SubcategoryName" Click="{x:Bind VMRef.CopyPolicyProperty_Click}">
+                                        <MenuFlyoutItem x:Uid="SubCategoryHeader" Tag="SubcategoryName" Click="{x:Bind VMRef.CopyPolicyProperty_Click}">
                                             <MenuFlyoutItem.Icon>
                                                 <FontIcon Glyph="&#xE8C8;" />
                                             </MenuFlyoutItem.Icon>
@@ -242,13 +242,13 @@
                             </ComboBox>
 
                             <!-- Apply button - only visible when changes pending -->
-                            <Button Width="32" 
+                            <Button Width="32"
                                     Height="32"
                                     Padding="0"
                                     VerticalAlignment="Center"
                                     Visibility="{x:Bind HasPendingChanges, Mode=OneWay}"
                                     Click="{x:Bind VMRef.ApplyIndividualChange_Click}"
-                                    Tag="{x:Bind}"   
+                                    Tag="{x:Bind}"
                                     BorderThickness="1"
                                     BorderBrush="{ThemeResource AccentButtonBorderBrush}"
                                     CornerRadius="4"
