--- a/Harden System Security/Pages/Protects/BitLocker.xaml
+++ b/Harden System Security/Pages/Protects/BitLocker.xaml
@@ -123,15 +123,52 @@
                                     </Button.ContentTemplate>
                                 </Button>
 
+                                <DropDownButton x:Uid="BitLockerEncryptionDropDownButton"
+                                                IsEnabled="{x:Bind ViewModel.BitLockerUiEnabled, Mode=OneWay}">
+                                    <DropDownButton.Flyout>
+                                        <MenuFlyout Placement="Bottom">
+                                            <MenuFlyoutItem x:Uid="EncryptMenuFlyoutItem"
+                                                            IsEnabled="{x:Bind ViewModel.BitLockerUiEnabled, Mode=OneWay}"
+                                                            Icon="{ui:FontIcon Glyph=&#xE72E;}"
+                                                            Click="{x:Bind ViewModel.EncryptVolume}" />
+                                            <MenuFlyoutItem x:Uid="DecryptMenuFlyoutItem"
+                                                            IsEnabled="{x:Bind ViewModel.BitLockerUiEnabled, Mode=OneWay}"
+                                                            Icon="{ui:FontIcon Glyph=&#xE785;}"
+                                                            Click="{x:Bind ViewModel.DecryptVolume}" />
+                                            <MenuFlyoutItem x:Uid="SuspendMenuFlyoutItem"
+                                                            IsEnabled="{x:Bind ViewModel.IsSuspendFeatureEnabled, Mode=OneWay}"
+                                                            Icon="{ui:FontIcon Glyph=&#xE769;}"
+                                                            Click="{x:Bind ViewModel.SuspendVolume}" />
+                                            <MenuFlyoutItem x:Uid="ResumeMenuFlyoutItem"
+                                                            IsEnabled="{x:Bind ViewModel.BitLockerUiEnabled, Mode=OneWay}"
+                                                            Icon="{ui:FontIcon Glyph=&#xF71A;}"
+                                                            Click="{x:Bind ViewModel.ResumeVolume}" />
+                                        </MenuFlyout>
+                                    </DropDownButton.Flyout>
+                                </DropDownButton>
+
                                 <Button x:Uid="AddKeyProtectorButton"
                                         VerticalAlignment="Center"
-                                        Visibility="Collapsed"
                                         IsEnabled="{x:Bind ViewModel.BitLockerUiEnabled, Mode=OneWay}"
                                         Click="{x:Bind ViewModel.AddKeyProtector}">
                                     <Button.ContentTemplate>
                                         <DataTemplate x:DataType="x:String">
                                             <StackPanel Orientation="Horizontal" Spacing="8">
                                                 <FontIcon Glyph="&#xE710;" FontSize="16"/>
+                                                <TextBlock Text="{x:Bind}"/>
+                                            </StackPanel>
+                                        </DataTemplate>
+                                    </Button.ContentTemplate>
+                                </Button>
+
+                                <Button x:Uid="ExportToJsonButton"
+                                        VerticalAlignment="Center"
+                                        IsEnabled="{x:Bind ViewModel.BitLockerUiEnabled, Mode=OneWay}"
+                                        Click="{x:Bind ViewModel.ExportBitLockerData}">
+                                    <Button.ContentTemplate>
+                                        <DataTemplate x:DataType="x:String">
+                                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                                <FontIcon Glyph="&#xE74E;" FontSize="16"/>
                                                 <TextBlock Text="{x:Bind}"/>
                                             </StackPanel>
                                         </DataTemplate>
@@ -389,6 +426,7 @@
 
                                                                         <!-- Delete button -->
                                                                         <Button Style="{StaticResource AccentButtonStyle}"
+                                                                                IsEnabled="{x:Bind VMRef.ElementsAreEnabled, Mode=OneWay}"
                                                                                 Click="{x:Bind VMRef.RemoveKeyProtector_Click}"
                                                                                 x:Uid="DeleteBLKeyProtectorButton"
                                                                                 MinWidth="0"
@@ -549,3 +587,4 @@
         </TabView>
     </Grid>
 </Page>
+    
